--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>High Miles Solutions | Services</title>
+  <link rel="icon" href="/logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <img src="/WhatsApp Image 2025-12-04 at 4.46.28 PM.png" alt="High Miles Solutions logo" class="logo" />
+      <img src="/logo.png" alt="High Miles Solutions logo" class="logo" />
       <div class="brand-text">
         <span class="brand-name">High Miles Solutions</span>
         <span class="brand-tag">Beyond Miles, Beyond Expectations</span>
@@ -132,7 +133,8 @@
         <p class="lede">Meticulously maintained vehicles equipped for luxury, comfort, and performance — from private travel to large groups.</p>
       </div>
       <div class="grid cols-3">
-        <div class="card">
+        <div class="card fleet-card">
+          <img src="/sedan.png" alt="High Miles Solutions sedan" class="fleet-image" />
           <h3>Sedans</h3>
           <p>Refined • Quiet • Executive | Ideal for 1–3 passengers.</p>
           <ul>
@@ -142,7 +144,8 @@
             <li>Ample luggage space</li>
           </ul>
         </div>
-        <div class="card">
+        <div class="card fleet-card">
+          <img src="/suv.png" alt="High Miles Solutions SUV" class="fleet-image" />
           <h3>SUVs</h3>
           <p>Powerful • Spacious • Elegant | Ideal for 1–5 passengers.</p>
           <ul>
@@ -197,7 +200,7 @@
 
   <footer class="footer">
     <div class="brand">
-      <img src="/WhatsApp Image 2025-12-04 at 4.46.28 PM.png" alt="HMS logo" class="logo" />
+      <img src="/logo.png" alt="HMS logo" class="logo" />
       <div class="brand-text">
         <span class="brand-name">High Miles Solutions</span>
         <span class="brand-tag">Beyond Miles, Beyond Expectations.</span>
