--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>High Miles Solutions | Home</title>
+  <link rel="icon" href="/logo.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <img src="/WhatsApp Image 2025-12-04 at 4.46.28 PM.png" alt="High Miles Solutions logo" class="logo" />
+      <img src="/logo.png" alt="High Miles Solutions logo" class="logo" />
       <div class="brand-text">
         <span class="brand-name">High Miles Solutions</span>
         <span class="brand-tag">Beyond Miles, Beyond Expectations</span>
@@ -43,7 +44,7 @@
         </div>
       </div>
       <div class="hero-card">
-        <img src="/WhatsApp Image 2025-12-04 at 4.46.28 PM.png" alt="HMS circle logo" />
+        <img src="https://i.ibb.co/6mSfphB/Untitled-design-7.png" alt="HMS circle logo" />
         <div class="card-text">
           <h3>Canada’s Destination Experts</h3>
           <p>From the Rockies to Niagara, Vancouver to Montreal — explore Canada with sophistication and ease.</p>
@@ -96,7 +97,7 @@
 
   <footer class="footer">
     <div class="brand">
-      <img src="/WhatsApp Image 2025-12-04 at 4.46.28 PM.png" alt="HMS logo" class="logo" />
+      <img src="/logo.png" alt="HMS logo" class="logo" />
       <div class="brand-text">
         <span class="brand-name">High Miles Solutions</span>
         <span class="brand-tag">Beyond Miles, Beyond Expectations.</span>
