Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="hero-card">
-        <img src="https://i.ibb.co/6mSfphB/Untitled-design-7.png" alt="HMS circle logo" />
+        <img src="/logo.png" alt="HMS circle logo" />
         <div class="card-text">
           <h3>Canada’s Destination Experts</h3>
           <p>From the Rockies to Niagara, Vancouver to Montreal — explore Canada with sophistication and ease.</p>
