Add fleet page and refresh light theme

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -89,7 +90,7 @@
         <div class="card">
           <h3>Meet the Fleet</h3>
           <p>Premium sedans, SUVs, sprinter vans, mini buses, and full-size coaches ready for any distance or group size.</p>
-          <a class="cta secondary" href="services.html#fleet">View Fleet Details</a>
+          <a class="cta secondary" href="fleet.html">View Fleet Details</a>
         </div>
       </div>
     </section>
@@ -106,6 +107,7 @@
     <div class="footer-links">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
