--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -131,6 +132,10 @@
         <p class="kicker">Our Fleet</p>
         <h2>Premium Vehicles Tailored for Every Journey</h2>
         <p class="lede">Meticulously maintained vehicles equipped for luxury, comfort, and performance — from private travel to large groups.</p>
+        <div class="cta-row">
+          <a class="cta secondary" href="fleet.html">View the full fleet page</a>
+          <a class="cta" href="contact.html">Request availability</a>
+        </div>
       </div>
       <div class="grid cols-3">
         <div class="card fleet-card">
@@ -209,6 +214,7 @@
     <div class="footer-links">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
