--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -87,6 +88,7 @@
     <div class="footer-links">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
