--- a/about.html
+++ b/about.html
@@ -26,7 +26,31 @@
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
+    <button class="menu-toggle" aria-label="Open navigation menu" aria-expanded="false">
+      <span></span>
+    </button>
   </header>
+
+  <div class="mobile-nav" data-mobile-nav>
+    <div class="mobile-nav-header">
+      <div class="brand">
+        <img src="/logo.png" alt="High Miles Solutions logo" class="logo" />
+        <div class="brand-text">
+          <span class="brand-name">High Miles Solutions</span>
+          <span class="brand-tag">Beyond Miles, Beyond Expectations</span>
+        </div>
+      </div>
+      <button class="close-menu" aria-label="Close navigation menu">✕</button>
+    </div>
+    <nav class="mobile-links">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="fleet.html">Fleet</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+  <div class="backdrop" data-menu-backdrop></div>
 
   <main>
     <section class="panel alt" id="about">
