Update image source paths for fleet vehicles

--- a/fleet.html
+++ b/fleet.html
@@ -109,7 +109,7 @@
         </div>
         <div class="card fleet-card">
           <div class="fleet-image placeholder">Sprinter Vans</div>
-          <img src="/sprinter-van.png" alt="HMS sprinter van" class="fleet-image" />
+          <img src="/sprinter_van.png" alt="HMS sprinter van" class="fleet-image" />
           <h3>Sprinter Vans</h3>
           <p>Versatile, upright comfort for 10–14 passengers.</p>
           <ul>
@@ -120,7 +120,7 @@
         </div>
         <div class="card fleet-card">
           <div class="fleet-image placeholder">Mini Buses</div>
-          <img src="/mini-bus.png" alt="HMS mini bus" class="fleet-image" />
+          <img src="/mini_bus.png" alt="HMS mini bus" class="fleet-image" />
           <h3>Mini Buses</h3>
           <p>Mid-size comfort that balances space and maneuverability.</p>
           <ul>
@@ -131,7 +131,7 @@
         </div>
         <div class="card fleet-card">
           <div class="fleet-image placeholder">Full-Size Coaches</div>
-          <img src="/coach-bus.png" alt="HMS full-size coach" class="fleet-image" />
+          <img src="/full_coach_bus.png" alt="HMS full-size coach" class="fleet-image" />
           <h3>Luxury Coaches</h3>
           <p>Luxury coaches for extended travel and large tours.</p>
           <ul>
