Replace fleet PNG assets with SVGs

--- a/fleet.html
+++ b/fleet.html
@@ -84,7 +84,8 @@
           </ul>
         </div>
         <div class="card fleet-card">
-          <div class="fleet-image placeholder">Sprinter Vans</div>
+          <img src="/fleet-sprinter.svg" alt="HMS sprinter van" class="fleet-image" />
+          <h3>Sprinter Vans</h3>
           <p>Versatile, upright comfort for 10–14 passengers.</p>
           <ul>
             <li>Reclining seats with aisle space</li>
@@ -93,7 +94,8 @@
           </ul>
         </div>
         <div class="card fleet-card">
-          <div class="fleet-image placeholder">Mini Buses</div>
+          <img src="/fleet-minibus.svg" alt="HMS mini bus" class="fleet-image" />
+          <h3>Mini Buses</h3>
           <p>Mid-size comfort that balances space and maneuverability.</p>
           <ul>
             <li>Perfect for 20–30 passenger groups</li>
@@ -102,7 +104,8 @@
           </ul>
         </div>
         <div class="card fleet-card">
-          <div class="fleet-image placeholder">Full-Size Coaches</div>
+          <img src="/fleet-coach.svg" alt="HMS full-size coach" class="fleet-image" />
+          <h3>Luxury Coaches</h3>
           <p>Luxury coaches for extended travel and large tours.</p>
           <ul>
             <li>Wide reclining seats and panoramic windows</li>
